# plasmoid-helloworldplugin

./: CMakeLists.txt
package/: metadata.json
package/contents/ui/: main.qml
plugin/: qmldir  widgetitem.cpp  widgetitem.h  widgetnameplugin.cpp  widgetnameplugin.h
